log
Sun, May 18, 2025  5:36:21 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025  5:42:11 PM: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:10: error: unused variable 'j' [-Werror=unused-variable]
   47 |   int i, j;
      |          ^
sudoku.c:47:7: error: unused variable 'i' [-Werror=unused-variable]
   47 |   int i, j;
      |       ^
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
sudoku.c: In function 'is_final':
sudoku.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1.exe: all warnings being treated as errors
5474077
Sun, May 18, 2025  5:42:36 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:10: error: unused variable 'j' [-Werror=unused-variable]
   47 |   int i, j;
      |          ^
sudoku.c:47:7: error: unused variable 'i' [-Werror=unused-variable]
   47 |   int i, j;
      |       ^
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1.exe: all warnings being treated as errors
24e7b01
Sun, May 18, 2025  5:45:33 PM: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
sudoku.c: In function 'is_final':
sudoku.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1.exe: all warnings being treated as errors
a569890
Sun, May 18, 2025  5:48:59 PM: 
 tests:  1|4
total_score: 10/70
9763294
Sun, May 18, 2025  6:44:02 PM: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  1|4
total_score: 10/70
03e7656
Sun, May 18, 2025  7:04:08 PM: 
 sudoku.c | 19 +++----------------
 1 file changed, 3 insertions(+), 16 deletions(-)
 tests:  1|4
total_score: 10/70
9594a7b
Sun, May 18, 2025  7:36:46 PM: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
f009491
Sun, May 18, 2025  7:40:34 PM: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  1|4
total_score: 10/70
643bd5c
Sun, May 18, 2025  7:41:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c13586e
Sun, May 18, 2025  7:44:07 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
26ad3d5
